...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activelists.HomeFragment">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:activeList="@{homeViewModel.shoppingLists}"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:onClick="@{() -> homeViewModel.onFabClicked()}"
                app:fabSize="auto"
                app:layout_constraintBottom_toBottomOf="parent"
...
